# peSentinel

./: .env.example  .gitignore  AGENTS.md  MVP.md  README.md  opencode.json  plan.md  pyproject.toml  spec.md
data/: policy.yaml
data/rules/: test_marker.yar
docs/: architecture.md  chapter_mapping.md
src/pesentinel/: cli.py
src/pesentinel/core/: pipeline.py  report.py  verdict.py
src/pesentinel/protection/: access_matrix.py  capability.py  domain.py  kernel.py  policy_bindings.py  revocation.py  stack_inspection.py  types.py
src/pesentinel/security/: audit.py  auth.py  classifier_tcsec.py  crypto.py  firewall.py  integrity.py  policy.py  selfscan.py
src/pesentinel/signals/: hash_reputation.py  pe_heuristics.py  scorer.py  windows_model.py  yara_signatures.py
tests/: conftest.py  test_access_matrix.py  test_audit.py  test_auth.py  test_batch_scan.py  test_bayes.py  test_capability.py  test_cli.py  test_crypto.py  test_domain.py  test_firewall.py  test_hash_reputation.py  test_integration_stage1.py  test_integration_stage2.py  test_integration_stage3.py  test_integrity.py  test_kernel.py  test_pe_heuristics.py  test_pipeline.py  test_policy.py  test_policy_bindings.py  test_protection_types.py  test_report.py  test_revocation.py  test_scorer.py  test_selfscan.py  test_stack_inspection.py  test_tcb_boundary.py  test_tcsec.py  test_verdict.py  test_windows_model.py  test_yara_signatures.py
