[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pesentinel"
version = "0.1.0"
description = "Windows-PE malware analyzer with an OS protection + security core (Ch.14/15)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "peSentinel" }]
dependencies = [
    "requests>=2.31",
    "typer>=0.9",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
pesentinel = "pesentinel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "pesentinel.protection.*"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
